[tool.poetry]
name = "devto-py"
version = "0.1.0"
description = "Dev.to REST API client"
authors = ["rhymes"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^4.5"
pytest-randomly = "^3.0"
pytest-sugar = "^0.9.2"
pytest-cov = "^2.7"
pytest-watch = "^4.2"
vcrpy = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
